crate/lib/sinex-primitives/tests/proof_compile_fail/missing_privacy.stderr
error[E0599]: no method named `build` found for struct `RuntimeUnitDescriptorBuilder<HasOutput, MissingPrivacy, HasMaterial, HasCheckpoint>` in the current scope
  --> tests/proof_compile_fail/missing_privacy.rs:13:6
   |
 4 |       let _ = RuntimeUnitDescriptor::builder(
   |  _____________-
 5 | |         subject_ref!("runtime_unit:test.missing_privacy"),
 6 | |         "test.missing_privacy",
 7 | |         "test",
...  |
12 | |     .checkpoint_policy("row_id")
13 | |     .build();
   | |     -^^^^^ method not found in `RuntimeUnitDescriptorBuilder<HasOutput, MissingPrivacy, HasMaterial, HasCheckpoint>`
   | |_____|
   |
   |
   = note: the method was found for
           - `RuntimeUnitDescriptorBuilder<HasOutput, HasPrivacy, HasMaterial, HasCheckpoint>`
